# ai-integration-sandbox

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  run-sandbox.cmd  run-sandbox.ps1  run-sandbox.sh  tasks.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
agent/: card.json
dashboard/: .gitkeep  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: A2uiRenderer.tsx  App.tsx  agui.ts  api.ts  main.tsx  styles.css  types.ts
deploy/: .gitkeep  Dockerfile  __init__.py  dashboard.Dockerfile  nginx.conf  provision_localstack.py  smoke_test.py  template.yaml
docs/: a2a-notes.md  architecture.md  evals-notes.md  fastapi-architecture.md  index.html  interview-practice.html  mapping-to-langchain.md  mcp-inspector.md  medium-article.html  medium-article.md  mediumarticle.html  memory-notes.md  protocols.md  rag-notes.md  real-providers.md  study-guide.html
docs/adr/: .gitkeep  001-sqs-approvals.md  002-s3-creatives.md
docs/runbooks/: add-a-partner.md
drills/: .gitkeep  flashcards.md  protocols-and-memory.md
drills/challenge-back/: 01-llm-in-connectors.md  02-skip-hitl.md  03-vectors-only-rag.md  04-big-prompt-agent.md  05-dynamo-creatives.md  06-retry-forever.md
drills/katas/: SOLUTION_backoff.md  SOLUTION_chunker.md  SOLUTION_idempotent_push.md  SOLUTION_pagination.md  SOLUTION_rate_limiter.md  SOLUTION_rrf.md  backoff.py  chunker.py  idempotent_push.py  pagination.py  rate_limiter.py  rrf.py  test_backoff.py  test_chunker.py  test_idempotent_push.py  test_pagination.py  test_rate_limiter.py  test_rrf.py
drills/system-design/: 01-integration-framework.md  02-hitl-agent.md  03-rag-changing-docs.md  04-production-evals.md  05-flaky-partner.md  06-agent-memory.md  07-a2a-specialist.md
mock_agents/: creative_review.py
mock_apis/: __init__.py  app.py  data.py
specs/: _TEMPLATE.md  a2a.md  agent.md  agui.md  connectors.md  dashboard.md  deploy.md  evals.md  mcp.md  memory.md  modern-ai-extensions.md  observability.md  rag.md  service.md  skills.md
tests/: test_smoke.py
(+131 files in other folders)
