[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aih"
version = "0.2.0"
description = "AI-native integration hub: an offline-first sandbox for API integrations and GenAI workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.28.1",
    "anyio>=4.14.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.50.2",
    "python-multipart>=0.0.9",
    "rank-bm25>=0.2.2",
    "mcp>=1.2.0",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.9",
]
# Real provider adapters live behind these extras; never required for tests.
anthropic = ["anthropic>=0.25"]
openai = ["openai>=1.0"]
# Optional OpenTelemetry tracing export (e.g. to Jaeger). Off by default so the
# offline test suite stays dependency-light; enable with AIH_OTEL_ENABLED=true.
otel = [
    "opentelemetry-sdk>=1.43.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aih"]

[tool.hatch.build.targets.sdist]
include = ["src/aih", "specs", "README.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks slow/integration tests (deselect with '-m \"not slow\"')",
    "integration: end-to-end tests that boot the service or mock APIs",
]
addopts = "-q"
pythonpath = ["src", "."]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C4", "SIM"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.coverage.run]
source = ["src/aih"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["aih"]
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
